--- a/paginaBusca.htm
+++ b/paginaBusca.htm
@@ -12,10 +12,18 @@
 
   <body>
 
-    <input type="search" name="" id="movie-search" placeholder="Search">
-    <input type="button" value="Search" id="search-btn">
+    <form id="search-form">
+      <label for="movie-search">Placeholder para label</label>
+      <input type="search" name="" id="movie-search" placeholder="Search">
+      <input type="button" value="Search" id="search-btn">
+    </form>
+
+    <section id="search-results-container">
+
+    </section>
 
     <script src="srcs/javascript/controllers/BuscaController.js"></script>
+    <script src="srcs/javascript/buscaFilme.js"></script>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
