BuscaModel criado e implementado

--- a/paginaBusca.htm
+++ b/paginaBusca.htm
@@ -23,6 +23,7 @@
     </section>
 
     <script src="srcs/javascript/controllers/BuscaController.js"></script>
+    <script src="srcs/javascript/models/BuscaModel.js"></script>
     <script src="srcs/javascript/buscaFilme.js"></script>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
