Páginas secundárias adicionadas e conserto de bugs

--- a/index.htm
+++ b/index.htm
@@ -80,7 +80,7 @@
                         <div class="dropdown-divider"></div>
 
                         Not a member yet?
-                        <button type="button" class="btn btn-primary signUp-btn">Sign up now</button>
+                        <button type="button" class="btn btn-primary signUp-btn"> <a href="newUser.html">Sign up now</a></button>
                 
                       </form>
                     </div>
