--- a/Crew.html
+++ b/Crew.html
@@ -77,7 +77,7 @@
                         <div class="dropdown-divider"></div>
 
                         Not a member yet?
-                        <button type="button" class="btn btn-primary signUp-btn">Sign up now</button>
+                        <button type="button" class="btn btn-primary signUp-btn"> <a href="newUser.html">Sign up now</a></button>
                 
                       </form>
                     </div>
