--- a/movies.html
+++ b/movies.html
@@ -73,7 +73,8 @@
                 <div class="form-group">
                   <label for="userPassword">Password</label>
                   <input type="password" class="form-control" id="userPassword">
-                  <small id="emailHelp" class="form-text text-muted"> <a class="passwordReset" href="passwordReset.html"> Forgot your password? </a></small>
+                  <small id="emailHelp" class="form-text text-muted"> <a class="passwordReset"
+                      href="passwordReset.html"> Forgot your password? </a></small>
                   <div class="form-group form-check m-1">
                     <input type="checkbox" class="form-check-input" id="rememberMe">
                     <label class="form-check-label" for="rememberMe">Remember me</label>
@@ -85,7 +86,7 @@
                 <div class="dropdown-divider"></div>
 
                 Not a member yet?
-                <button type="button" class="btn btn-primary signUp-btn">Sign up now</button>
+                <button type="button" class="btn btn-primary signUp-btn"> <a href="newUser.html">Sign up now</a></button>
 
               </form>
             </div>
@@ -115,31 +116,31 @@
 
               <div class="col-md-2">
                 <a href="#">
-                  <img src="srcs/assets/avengersPoster.jpg" class="d-inline-block img-sizing" alt="Avengers: Endgame">
+                  <img src="srcs/assets/frozenPoster.jpg" class="d-inline-block img-sizing" alt="Avengers: Endgame">
                 </a>
               </div>
 
               <div class="col-md-2">
                 <a href="#">
-                  <img src="srcs/assets/avengersPoster.jpg" class="d-inline-block img-sizing" alt="Avengers: Endgame">
+                  <img src="srcs/assets/justGoPoster.jpg" class="d-inline-block img-sizing" alt="Avengers: Endgame">
                 </a>
               </div>
 
               <div class="col-md-2">
                 <a href="#">
-                  <img src="srcs/assets/avengersPoster.jpg" class="d-inline-block img-sizing" alt="Avengers: Endgame">
+                  <img src="srcs/assets/piratesPoster.jpg" class="d-inline-block img-sizing" alt="Avengers: Endgame">
                 </a>
               </div>
 
               <div class="col-md-2">
                 <a href="#">
-                  <img src="srcs/assets/avengersPoster.jpg" class="d-inline-block img-sizing" alt="Avengers: Endgame">
+                  <img src="srcs/assets/titanicPoster.jpg" class="d-inline-block img-sizing" alt="Avengers: Endgame">
                 </a>
               </div>
 
               <div class="col-md-2">
                 <a href="#">
-                  <img src="srcs/assets/avengersPoster.jpg" class="d-inline-block img-sizing" alt="Avengers: Endgame">
+                  <img src="srcs/assets/avatarPoster.png" class="d-inline-block img-sizing" alt="Avengers: Endgame">
                 </a>
               </div>
 
@@ -151,13 +152,13 @@
             <div class="row">
               <div class="col-md-2">
                 <a href="#">
-                  <img src="srcs/assets/avengersPoster.jpg" class="d-inline-block img-sizing" alt="Avengers: Endgame">
+                  <img src="srcs/assets/beautyPoster.jpg" class="d-inline-block img-sizing" alt="Avengers: Endgame">
                 </a>
               </div>
 
               <div class="col-md-2">
                 <a href="#">
-                  <img src="srcs/assets/avengersPoster.jpg" class="d-inline-block img-sizing" alt="Avengers: Endgame">
+                  <img src="srcs/assets/lotrPoster.jpg" class="d-inline-block img-sizing" alt="Avengers: Endgame">
                 </a>
               </div>
 
@@ -189,12 +190,14 @@
 
           </div>
           <!-- Carousel controls -->
-          <a class="carousel-control-prev" href="#mostCarousel" data-slide="prev">
+          <a class="carousel-control-prev control-size" href="#mostCarousel" data-slide="prev">
+            <p class="controller">•</p>
           </a>
-          <a class="carousel-control-next" href="#mostCarousel" data-slide="next">
+          <a class="carousel-control-next control-size" href="#mostCarousel" data-slide="next">
+            <p class="controller">•</p>
           </a>
         </div>
-     </div>
+      </div>
     </div>
 
     <div class="moviesSelect p-3 m-5">
@@ -210,37 +213,38 @@
             <div class="row">
               <div class="col-md-2">
                 <a href="#">
-                  <img src="srcs/assets/avengersPoster.jpg" class="d-inline-block img-sizing" alt="Avengers: Endgame">
+                  <img src="srcs/assets/kingsmanPoster.jpg" class="d-inline-block img-sizing" alt="Avengers: Endgame">
                 </a>
               </div>
 
               <div class="col-md-2">
                 <a href="#">
-                  <img src="srcs/assets/avengersPoster.jpg" class="d-inline-block img-sizing" alt="Avengers: Endgame">
+                  <img src="srcs/assets/rocketmanPoster.jpg" class="d-inline-block img-sizing" alt="Avengers: Endgame">
                 </a>
               </div>
 
               <div class="col-md-2">
                 <a href="#">
-                  <img src="srcs/assets/avengersPoster.jpg" class="d-inline-block img-sizing" alt="Avengers: Endgame">
+                  <img src="srcs/assets/parasitePoster.jpg" class="d-inline-block img-sizing" alt="Avengers: Endgame">
                 </a>
               </div>
 
               <div class="col-md-2">
                 <a href="#">
-                  <img src="srcs/assets/avengersPoster.jpg" class="d-inline-block img-sizing" alt="Avengers: Endgame">
+                  <img src="srcs/assets/rockyPoster.jpg" class="d-inline-block img-sizing" alt="Avengers: Endgame">
                 </a>
               </div>
 
               <div class="col-md-2">
                 <a href="#">
-                  <img src="srcs/assets/avengersPoster.jpg" class="d-inline-block img-sizing" alt="Avengers: Endgame">
+                  <img src="srcs/assets/splitPoster.jpg" class="d-inline-block img-sizing" alt="Avengers: Endgame">
                 </a>
               </div>
 
               <div class="col-md-2">
                 <a href="#">
-                  <img src="srcs/assets/avengersPoster.jpg" class="d-inline-block img-sizing" alt="Avengers: Endgame">
+                  <img src="srcs/assets/interstellarPoster.jpg" class="d-inline-block img-sizing"
+                    alt="Avengers: Endgame">
                 </a>
               </div>
 
@@ -290,17 +294,19 @@
 
           </div>
           <!-- Carousel controls -->
-          <a class="carousel-control-prev" href="#bestCarousel" data-slide="prev">
+          <a class="carousel-control-prev control-size" href="#bestCarousel" data-slide="prev">
+            <p class="controller">•</p>
           </a>
-          <a class="carousel-control-next" href="#bestCarousel" data-slide="next">
+          <a class="carousel-control-next control-size" href="#bestCarousel" data-slide="next">
+            <p class="controller">•</p>
           </a>
         </div>
-     </div>
+      </div>
     </div>
 
     <div class="moviesSelect p-3 m-5">
       <!--DISCOVER MOVIES CAROUSEL-->
-      <h3 class="movielist p-2 ml-1">Most <b>watched</b></h3>
+      <h3 class="movielist p-2 ml-1"> A <b>discover</b></h3>
 
       <div id="discoverCarousel" class="carousel slide" data-ride="carousel" data-interval="0">
 
@@ -311,37 +317,37 @@
             <div class="row">
               <div class="col-md-2">
                 <a href="#">
-                  <img src="srcs/assets/avengersPoster.jpg" class="d-inline-block img-sizing" alt="Avengers: Endgame">
+                  <img src="srcs/assets/singlemanPoster.jpg" class="d-inline-block img-sizing" alt="Avengers: Endgame">
                 </a>
               </div>
 
               <div class="col-md-2">
                 <a href="#">
-                  <img src="srcs/assets/avengersPoster.jpg" class="d-inline-block img-sizing" alt="Avengers: Endgame">
+                  <img src="srcs/assets/wallstreetPoster.jpg" class="d-inline-block img-sizing" alt="Avengers: Endgame">
                 </a>
               </div>
 
               <div class="col-md-2">
                 <a href="#">
-                  <img src="srcs/assets/avengersPoster.jpg" class="d-inline-block img-sizing" alt="Avengers: Endgame">
+                  <img src="srcs/assets/pandorumPoster.jpg" class="d-inline-block img-sizing" alt="Avengers: Endgame">
                 </a>
               </div>
 
               <div class="col-md-2">
                 <a href="#">
-                  <img src="srcs/assets/avengersPoster.jpg" class="d-inline-block img-sizing" alt="Avengers: Endgame">
+                  <img src="srcs/assets/columbusPoster.jpg" class="d-inline-block img-sizing" alt="Avengers: Endgame">
                 </a>
               </div>
 
               <div class="col-md-2">
                 <a href="#">
-                  <img src="srcs/assets/avengersPoster.jpg" class="d-inline-block img-sizing" alt="Avengers: Endgame">
+                  <img src="srcs/assets/eyesPoster.jpg" class="d-inline-block img-sizing" alt="Avengers: Endgame">
                 </a>
               </div>
 
               <div class="col-md-2">
                 <a href="#">
-                  <img src="srcs/assets/avengersPoster.jpg" class="d-inline-block img-sizing" alt="Avengers: Endgame">
+                  <img src="srcs/assets/yourNamePoster.jpg" class="d-inline-block img-sizing" alt="Avengers: Endgame">
                 </a>
               </div>
 
@@ -391,37 +397,43 @@
 
           </div>
           <!-- Carousel controls -->
-          <a class="carousel-control-prev" href="#discoverCarousel" data-slide="prev">
+          <a class="carousel-control-prev control-size" href="#discoverCarousel" data-slide="prev">
+            <p class="controller">•</p>
           </a>
-          <a class="carousel-control-next" href="#discoverCarousel" data-slide="next">
+          <a class="carousel-control-next control-size" href="#discoverCarousel" data-slide="next">
+            <p class="controller">•</p>
           </a>
         </div>
-     </div>
+      </div>
     </div>
-    
-  <!--START MEMBERSHIP-->
-        <div class="signature d-flex flex-column align-items-center justify-content-center p-3 mb-5">
-          <h3> Ready to watch? Enter your email to create or restart your membership.</h3>
-          <br><br>
-          <div class="input-group mb-3 w-50 min-vw-75">
-            <input type="text" class="form-control" placeholder="E-mail" aria-label="Recipient's username"
-              aria-describedby="button-addon2">
-            <div class="input-group-append">
-              <button class="btn btn-outline lets-btn" type="submit" id="button-addon2">Let's go!</button>
-            </div>
-          </div>
+
+    <!--START MEMBERSHIP-->
+    <div class="signature d-flex flex-column align-items-center justify-content-center p-3 mb-5">
+      <h3> Ready to watch? Enter your email to create or restart your membership.</h3>
+      <br><br>
+      <div class="input-group mb-3 w-50 min-vw-75">
+        <input type="text" class="form-control" placeholder="E-mail" aria-label="Recipient's username"
+          aria-describedby="button-addon2">
+        <div class="input-group-append">
+          <button class="btn btn-outline lets-btn" type="submit" id="button-addon2">Let's go!</button>
         </div>
-    
+      </div>
+    </div>
+
   </main>
 </body>
 
 <footer>
   <!--SOCIAL MEDIA-->
   <div>
-    <a href="https://twitter.com/resiliaflix" target="blank"><img src="srcs/assets/twitter.png" width="30" height="30"> </a>
-        <a href="https://facebook.com/resiliaflix" target="blank"><img src="srcs/assets/facebook.png" width="30" height="30"></a>
-        <a href="https://youtube.com/resiliaflix" target="blank"><img src="srcs/assets/youtube.png" width="30" height="30"></a>
-        <a href="https://instagram.com/resiliaflix" target="blank"><img src="srcs/assets/instagram.png" width="30" height="30"></a>
+    <a href="https://twitter.com/resiliaflix" target="blank"><img src="srcs/assets/twitter.png" width="30" height="30">
+    </a>
+    <a href="https://facebook.com/resiliaflix" target="blank"><img src="srcs/assets/facebook.png" width="30"
+        height="30"></a>
+    <a href="https://youtube.com/resiliaflix" target="blank"><img src="srcs/assets/youtube.png" width="30"
+        height="30"></a>
+    <a href="https://instagram.com/resiliaflix" target="blank"><img src="srcs/assets/instagram.png" width="30"
+        height="30"></a>
   </div>
   <br><br>
   <p>Resília LTDA &#169</p>
