--- a/paginaBusca.htm
+++ b/paginaBusca.htm
@@ -24,6 +24,7 @@
 
     <script src="srcs/javascript/controllers/BuscaController.js"></script>
     <script src="srcs/javascript/models/BuscaModel.js"></script>
+    <script src="srcs/javascript/views/BuscaView.js"></script>
     <script src="srcs/javascript/buscaFilme.js"></script>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
