Correção de bugs e erros

--- a/movies.html
+++ b/movies.html
@@ -164,25 +164,25 @@
 
               <div class="col-md-2">
                 <a href="#">
-                  <img src="srcs/assets/avengersPoster.jpg" class="d-inline-block img-sizing" alt="Avengers: Endgame">
+                  <img src="srcs/assets/fightPoster.jpg" class="d-inline-block img-sizing" alt="Avengers: Endgame">
                 </a>
               </div>
 
               <div class="col-md-2">
                 <a href="#">
-                  <img src="srcs/assets/avengersPoster.jpg" class="d-inline-block img-sizing" alt="Avengers: Endgame">
+                  <img src="srcs/assets/darkKnightPoster.jpg" class="d-inline-block img-sizing" alt="Avengers: Endgame">
                 </a>
               </div>
 
               <div class="col-md-2">
                 <a href="#">
-                  <img src="srcs/assets/avengersPoster.jpg" class="d-inline-block img-sizing" alt="Avengers: Endgame">
+                  <img src="srcs/assets/moanaPoster.jpg" class="d-inline-block img-sizing" alt="Avengers: Endgame">
                 </a>
               </div>
 
               <div class="col-md-2">
                 <a href="#">
-                  <img src="srcs/assets/avengersPoster.jpg" class="d-inline-block img-sizing" alt="Avengers: Endgame">
+                  <img src="srcs/assets/hpPoster.jpg" class="d-inline-block img-sizing" alt="Avengers: Endgame">
                 </a>
               </div>
 
@@ -256,37 +256,37 @@
             <div class="row">
               <div class="col-md-2">
                 <a href="#">
-                  <img src="srcs/assets/avengersPoster.jpg" class="d-inline-block img-sizing" alt="Avengers: Endgame">
+                  <img src="srcs/assets/jokerPoster.jpg" class="d-inline-block img-sizing" alt="Avengers: Endgame">
                 </a>
               </div>
 
               <div class="col-md-2">
                 <a href="#">
-                  <img src="srcs/assets/avengersPoster.jpg" class="d-inline-block img-sizing" alt="Avengers: Endgame">
+                  <img src="srcs/assets/hamiltonPoster.png" class="d-inline-block img-sizing" alt="Avengers: Endgame">
                 </a>
               </div>
 
               <div class="col-md-2">
                 <a href="#">
-                  <img src="srcs/assets/avengersPoster.jpg" class="d-inline-block img-sizing" alt="Avengers: Endgame">
+                  <img src="srcs/assets/upPoster.jpg" class="d-inline-block img-sizing" alt="Avengers: Endgame">
                 </a>
               </div>
 
               <div class="col-md-2">
                 <a href="#">
-                  <img src="srcs/assets/avengersPoster.jpg" class="d-inline-block img-sizing" alt="Avengers: Endgame">
+                  <img src="srcs/assets/prejudicePoster.jpg" class="d-inline-block img-sizing" alt="Avengers: Endgame">
                 </a>
               </div>
 
               <div class="col-md-2">
                 <a href="#">
-                  <img src="srcs/assets/avengersPoster.jpg" class="d-inline-block img-sizing" alt="Avengers: Endgame">
+                  <img src="srcs/assets/seemePoster.jpg" class="d-inline-block img-sizing" alt="Avengers: Endgame">
                 </a>
               </div>
 
               <div class="col-md-2">
                 <a href="#">
-                  <img src="srcs/assets/avengersPoster.jpg" class="d-inline-block img-sizing" alt="Avengers: Endgame">
+                  <img src="srcs/assets/othersPoster.jpg" class="d-inline-block img-sizing" alt="Avengers: Endgame">
                 </a>
               </div>
 
@@ -359,37 +359,37 @@
             <div class="row">
               <div class="col-md-2">
                 <a href="#">
-                  <img src="srcs/assets/avengersPoster.jpg" class="d-inline-block img-sizing" alt="Avengers: Endgame">
+                  <img src="srcs/assets/upsidePoster.jpg" class="d-inline-block img-sizing" alt="Avengers: Endgame">
                 </a>
               </div>
 
               <div class="col-md-2">
                 <a href="#">
-                  <img src="srcs/assets/avengersPoster.jpg" class="d-inline-block img-sizing" alt="Avengers: Endgame">
+                  <img src="srcs/assets/austenlandPoster.jpg" class="d-inline-block img-sizing" alt="Avengers: Endgame">
                 </a>
               </div>
 
               <div class="col-md-2">
                 <a href="#">
-                  <img src="srcs/assets/avengersPoster.jpg" class="d-inline-block img-sizing" alt="Avengers: Endgame">
+                  <img src="srcs/assets/monsterPoster.jpg" class="d-inline-block img-sizing" alt="Avengers: Endgame">
                 </a>
               </div>
 
               <div class="col-md-2">
                 <a href="#">
-                  <img src="srcs/assets/avengersPoster.jpg" class="d-inline-block img-sizing" alt="Avengers: Endgame">
+                  <img src="srcs/assets/aSilentVoicePoster.jpg" class="d-inline-block img-sizing" alt="Avengers: Endgame">
                 </a>
               </div>
 
               <div class="col-md-2">
                 <a href="#">
-                  <img src="srcs/assets/avengersPoster.jpg" class="d-inline-block img-sizing" alt="Avengers: Endgame">
+                  <img src="srcs/assets/trumanPoster.jpg" class="d-inline-block img-sizing" alt="Avengers: Endgame">
                 </a>
               </div>
 
               <div class="col-md-2">
                 <a href="#">
-                  <img src="srcs/assets/avengersPoster.jpg" class="d-inline-block img-sizing" alt="Avengers: Endgame">
+                  <img src="srcs/assets/sociedadelitPoster.jpg" class="d-inline-block img-sizing" alt="Avengers: Endgame">
                 </a>
               </div>
 
