--- a/newUser.html
+++ b/newUser.html
@@ -100,7 +100,7 @@
 
     <main>
         <!-- MEMBER SIGN UP FORM-->
-        <div class="contactArea d-flex justify-content-center">
+        <div class="d-flex justify-content-center">
 
             <div class="memberSignUp m-5 p-5">
                 <div class="headForm d-flex align-items-center mb-5">
