--- a/newUser.html
+++ b/newUser.html
@@ -186,6 +186,11 @@
 
                             <input type="text" class="form-control" id="street" placeholder="1234 Main St">
                         </div>
+                        <div class="form-group">
+                            <label for="inputAddress2">Address 2</label>
+                            <input type="text" class="form-control" id="complement" <input type="text"
+                                class="form-control" id="inputAddress" placeholder="1234 Main St">
+                        </div>
 
                         <div class="form-row">
                             <div class="col-md-4 mb-3">
