Implementação da primeira parte da busca

--- a/paginaBusca.htm
+++ b/paginaBusca.htm
@@ -14,18 +14,18 @@
   <body>
 
     <form id="search-form">
-      <label for="movie-search">Placeholder para label</label>
-      <input type="search" name="" id="movie-search" placeholder="Search">
+      <label for="search-input">Placeholder para label</label>
+      <input type="search" name="" id="search-input" placeholder="Enter a movie name">
       <input type="button" value="Search" id="search-btn">
     </form>
 
     <section id="search-results-container">
     </section>
 
-    <script src="srcs/javascript/controllers/BuscaController.js"></script>
-    <script src="srcs/javascript/models/BuscaModel.js"></script>
-    <script src="srcs/javascript/views/BuscaView.js"></script>
-    <script src="srcs/javascript/buscaFilme.js"></script>
+    <script src="srcs/javascript/controllers/SearchController.js"></script>
+    <script src="srcs/javascript/models/SearchModel.js"></script>
+    <script src="srcs/javascript/views/SearchView.js"></script>
+    <script src="srcs/javascript/movieSearch.js"></script>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
