Correção de erros e bugs

--- a/Crew.html
+++ b/Crew.html
@@ -97,11 +97,11 @@
             <div class="card-body">
               <img class="crewPic" src="srcs/assets/jansen.jpg">
               <h5 class="card-title">Jansen</h5>
-              <h6 class="card-subtitle mb-2 text-muted">Jansen@resiliaflix.com</h6>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <h6 class="card-subtitle mb-2 text-muted">Jansen Bruno</h6>
+              <p class="card-text"><a href="mailto:Jansen@resiliaflix.com">Entre em contato</a></p>
               <a href="https://www.facebook.com/profile.php?id=100002497136878" target="_blank"><img src="srcs/assets/facebook_c.png" width="30" height="30"></a>
               <a href="https://instagram.com/sinistro_b7" target="_blank"><img src="srcs/assets/instagram_c.png" width="30" height="30"></a>
-              <a href="https://github.com/JansenBruno" target="_blank"><img src="srcs/assets/github_c.PNG" width="30" height="30"></a>
+              <a href="https://github.com/JansenBruno" target="_blank"><img src="srcs/assets/github_c.png" width="30" height="30"></a>
             </div>
           </div>
 
@@ -109,11 +109,11 @@
             <div class="card-body">
               <img class="crewPic" src="srcs/assets/jarom.jpg">
               <h5 class="card-title">Jarom</h5>
-              <h6 class="card-subtitle mb-2 text-muted">Jarom@resiliaflix.com</h6>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <h6 class="card-subtitle mb-2 text-muted">Jarom Aidukaitis</h6>
+              <p class="card-text"><a href="mailto:jarom@resiliaflix.com">Entre em contato</a></p>
               <a href="https://facebook.com/jarom.aidukaitis" target="_blank"><img src="srcs/assets/facebook_c.png" width="30" height="30"></a>
               <a href="https://instagram.com/jaidukaitis" target="_blank"><img src="srcs/assets/instagram_c.png" width="30" height="30"></a>
-              <a href="https://github.com/jaromaidukaitis" target="_blank"><img src="srcs/assets/github_c.PNG" width="30" height="30"></a>
+              <a href="https://github.com/jaromaidukaitis" target="_blank"><img src="srcs/assets/github_c.png" width="30" height="30"></a>
             </div>
           </div>
 
@@ -121,11 +121,11 @@
             <div class="card-body">
               <img class="crewPic" src="srcs/assets/joaquim.jpg">
               <h5 class="card-title">Joaquim</h5>
-              <h6 class="card-subtitle mb-2 text-muted">Joaquim@resiliaflix.com</h6>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <h6 class="card-subtitle mb-2 text-muted">Joaquim Castro</h6>
+              <p class="card-text"><a href="mailto:joaquim@resiliaflix.com">Entre em contato</a></p>
               <a href="https://facebook.com/JokasRodrigo" target="_blank"><img src="srcs/assets/facebook_c.png" width="30" height="30"></a>
               <a href="https://instagram.com/Jokasthejokas" target="_blank"><img src="srcs/assets/instagram_c.png" width="30" height="30"></a>
-              <a href="https://github.com/Joaquim09Castro" target="_blank"><img src="srcs/assets/github_c.PNG" width="30" height="30"></a>
+              <a href="https://github.com/Joaquim09Castro" target="_blank"><img src="srcs/assets/github_c.png" width="30" height="30"></a>
 
             </div>
           </div>
@@ -134,11 +134,11 @@
             <div class="card-body">
               <img class="crewPic" src="srcs/assets/paula.jpg">
               <h5 class="card-title">Paula</h5>
-              <h6 class="card-subtitle mb-2 text-muted">Paula@resiliaflix.com</h6>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <h6 class="card-subtitle mb-2 text-muted">Paula Gomes</h6>
+              <p class="card-text"><a href="mailto:Paula@resiliaflix.com">Entre em contato</a></p>
               <a href="https://facebook.com/paula.gomes.188" target="_blank"><img src="srcs/assets/facebook_c.png" width="30" height="30"></a>
               <a href="https://instagram.com/paulacng" target="_blank"><img src="srcs/assets/instagram_c.png" width="30" height="30"></a>
-              <a href="https://github.com/paula-gomes" target="_blank"><img src="srcs/assets/github_c.PNG" width="30" height="30"></a>
+              <a href="https://github.com/paula-gomes" target="_blank"><img src="srcs/assets/github_c.png" width="30" height="30"></a>
 
             </div>
           </div>
@@ -147,11 +147,11 @@
             <div class="card-body">
               <img class="crewPic" src="srcs/assets/tati.jpg">
               <h5 class="card-title">Tati</h5>
-              <h6 class="card-subtitle mb-2 text-muted">Tati@resiliaflix.com</h6>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <h6 class="card-subtitle mb-2 text-muted">Tati Machado</h6>
+              <p class="card-text"><a href="mailto:tati@resiliaflix.com">Entre em contato</a></p>
               <a href="https://facebook.com/taaatimachado" target="_blank"><img src="srcs/assets/facebook_c.png" width="30" height="30"></a>
               <a href="https://instagram.com/taaatimachado" target="_blank"><img src="srcs/assets/instagram_c.png" width="30" height="30"></a>
-              <a href="https://github.com/taaatimachado" target="_blank"><img src="srcs/assets/github_c.PNG" width="30" height="30"></a>
+              <a href="https://github.com/taaatimachado" target="_blank"><img src="srcs/assets/github_c.png" width="30" height="30"></a>
             </div>
           </div>
 
