adiconado script de login do navbar e correção do type para o input email do newUser.html

--- a/index.htm
+++ b/index.htm
@@ -47,8 +47,8 @@
           </ul>
  
           <form class="form-inline my-2 my-lg-0 mr-3">
-            <input class="form-control mr-sm-2 mb-1" type="search" placeholder="Your favorite movie here" aria-label="Search">
-            <button class="btn btn-outline-dark mb-1 mr-2 search-btn" type="submit">Search</button>
+            <input class="form-control mr-sm-2 mb-1" type="search" placeholder="Your favorite movie here" aria-label="Search" id="movie-search">
+            <button class="btn btn-outline-dark mb-1 mr-2 search-btn" type="submit" id="button-search">Search</button>
                   <div class="dropdown">
                     <button class="btn btn-dark sign-btn mb-1 mr-2 dropdown-toggle signIn-btn" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                       Sign in
@@ -72,7 +72,7 @@
                           </div>  
                         </div>
                     
-                        <button type="button" class="btn enter-btn drop-btn">Enter</button>
+                        <button type="button" class="btn enter-btn drop-btn" id="button-login">Enter</button>
 
                         <div class="dropdown-divider"></div>
 
@@ -254,5 +254,6 @@
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+<script src="/srcs/javascript/loginNavbar.js"></script>
 
 </html>
