--- a/newUser.html
+++ b/newUser.html
@@ -147,7 +147,7 @@
                             <div class="col-md-6 mb-3">
                                 <label for="validationDefault02">E-mail</label>
 
-                                <input type="text" class="form-control" id="email" placeholder="Your email" <input
+                                <input type="email" class="form-control" id="email" placeholder="Your email" <input
                                     type="text" class="form-control" id="validationDefault02" placeholder="Your email"
                                     required>
                             </div>
