--- a/loggedIndex.htm
+++ b/loggedIndex.htm
@@ -6,7 +6,7 @@
     <link rel="shortcut icon" type="image/x-icon" href="srcs/assets/logo2.PNG">
     <link href="https://fonts.googleapis.com/css2?family=Grand+Hotel&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <link rel="stylesheet" href="srcs/css/indexStyle.css">
+    <link rel="stylesheet" href="srcs/css/logIndexStyle.css">
     <title>ResíliaFlix</title>
 </head>
 
@@ -48,13 +48,13 @@
  
           <form class="form-inline my-2 my-lg-0 mr-3">
             <input class="form-control mr-sm-2 mb-1" type="search" placeholder="Your favorite movie here" aria-label="Search">
-            <button class="btn btn-outline-dark mb-1 mr-2 search-btn" type="submit">Search</button>
+            <button class="btn btn-outline-dark mb-1 mr-2 p-2 search-btn" type="submit">Search</button>
                   <div class="dropdown">
-                    <button class="btn btn-dark sign-btn mb-1 mr-2 dropdown-toggle signIn-btn" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                      Sign in
+                    <button class="btn sign-btn mb-1 mr-2 signIn-btn" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <img src="srcs/assets/user.png" width="25" height="25" >
                     </button>
                     <!--SIGN IN DROPDOWN MENU-->
-                    <div class="dropdown-menu dropdown-menu-right p-5" aria-labelledby="dropdownMenuButton">
+                    <div class="dropdown-menu dropdown-menu-right p-5 disabled"aria-labelledby="dropdownMenuButton">
                       <h3>Hello! :) </h3>
                       <form>
                         <div class="form-group">
@@ -94,16 +94,6 @@
           <li data-target="#carousel" data-slide-to="0" class="active"></li>
           <li data-target="#carousel" data-slide-to="1"></li>
           <li data-target="#carousel" data-slide-to="2"></li>
-          <li data-target="#carousel" data-slide-to="3"></li>
-          <li data-target="#carousel" data-slide-to="4"></li>
-          <li data-target="#carousel" data-slide-to="5"></li>
-          <li data-target="#carousel" data-slide-to="6"></li>
-          <li data-target="#carousel" data-slide-to="7"></li>
-          <li data-target="#carousel" data-slide-to="8"></li>
-          <li data-target="#carousel" data-slide-to="9"></li>
-          <li data-target="#carousel" data-slide-to="10"></li>
-          <li data-target="#carousel" data-slide-to="11"></li>
-          <li data-target="#carousel" data-slide-to="12"></li>
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
@@ -113,34 +103,7 @@
             <img src="srcs/assets/interestelar.jpg" class="d-block w-100 img-sizing" alt="Interestelar">
           </div>
           <div class="carousel-item">
-            <img src="srcs/assets/parasite.jpg" class="d-block w-100 img-sizing" alt="Parasite">
-          </div>
-          <div class="carousel-item">
-            <img src="srcs/assets/4k-joker-2020-8l.jpg" class="d-block w-100 img-sizing img-position" alt="Joker">
-          </div>
-          <div class="carousel-item">
             <img src="srcs/assets/yourname.jpg" class="d-block w-100 img-sizing img-position" alt="Your Name">
-          </div>
-          <div class="carousel-item">
-            <img src="srcs/assets/trumanshow.jpg" class="d-block w-100 img-sizing img-position" alt="The Truman Show">
-          </div>
-          <div class="carousel-item">
-            <img src="srcs/assets/nysm.jpg" class="d-block w-100 img-sizing" alt="Now You See Me">
-          </div>
-          <div class="carousel-item">
-            <img src="srcs/assets/split.jpg" class="d-block w-100 img-sizing" alt="Split">
-          </div>
-          <div class="carousel-item">
-            <img src="srcs/assets/viva.jpg" class="d-block w-100 img-sizing img-position" alt="Coco">
-          </div>
-          <div class="carousel-item">
-            <img src="srcs/assets/pocbp.jpg" class="d-block w-100 img-sizing" alt="Pirates of Caribe: The Curse of Black Pearl">
-          </div>
-          <div class="carousel-item">
-            <img src="srcs/assets/rocketman.jpg" class="d-block w-100 img-sizing img-position" alt="Rocketman">
-          </div>
-          <div class="carousel-item">
-            <img src="srcs/assets/inception.jpg" class="d-block w-100 img-sizing img-position" alt="Inception">
           </div>
         </div>
         <a class="carousel-control-prev" href="#carousel" role="button" data-slide="prev">
