--- a/newUser.html
+++ b/newUser.html
@@ -14,91 +14,47 @@
 
 <body>
     <header>
-        <!--NAVBAR-->
-        <nav class="navbar navbar-expand-lg fixed-top navbar-light">
-            <a class="navbar-brand nav-text" href="index.htm">
-                <img src="srcs/assets/logo2.PNG" width="35" height="35" class="d-inline-block align-center"
-                    alt="ResiliaFlix" loading="lazy">
-                ResíliaFlix
-            </a>
+ <!--NAVBAR-->
+ <nav class="navbar navbar-expand-lg fixed-top navbar-light">
+    <a class="navbar-brand nav-text" href="index.htm">
+      <img src="srcs/assets/logo2.PNG" width="35" height="35" class="d-inline-block align-center" alt="ResiliaFlix" loading="lazy">
+      Resíliaflix
+    </a>
 
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+  
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="index.htm">Home <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            What to watch?
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" href="movies.html">Movies</a>
+            <a class="dropdown-item" href="series.html">Series</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="news.html">What's next?</a>
+          </div>
+        </li>
 
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="index.htm">Home <span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            What to watch?
-                        </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="movies.html">Movies</a>
-                            <a class="dropdown-item" href="series.html">Series</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="news.html">What's next?</a>
-                        </div>
-                    </li>
+        <li class="nav-item">
+            <a class="nav-link" href="Crew.html">Crew</a>
+        </li>
 
-                    <li class="nav-item">
-                        <a class="nav-link" href="Crew.html">Crew</a>
-                    </li>
+      </ul>
 
-                </ul>
+      
+   </div>    
+ </nav>
+</header>
 
-                <form class="form-inline my-2 my-lg-0 mr-3">
-                    <input class="form-control mr-sm-2 mb-1" type="search" placeholder="Your favorite movie here"
-                        aria-label="Search">
-                    <button class="btn btn-outline-dark mb-1 mr-2 search-btn" type="submit">Search</button>
-                    <div class="dropdown">
-                        <button class="btn btn-dark sign-btn mb-1 mr-2 dropdown-toggle" type="button"
-                            id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            Sign in
-                        </button>
-                        <!--SIGN IN DROPDOWN MENU-->
-                        <div class="dropdown-menu dropdown-menu-right p-5" aria-labelledby="dropdownMenuButton">
-                            <h3>Hello! :) </h3>
-                            <form>
-                                <div class="form-group">
-                                    <label for="userEmail">Email address</label>
-                                    <input type="email" class="form-control" id="userEmail"
-                                        aria-describedby="emailHelp">
-                                </div>
+<main>     
 
-                                <div class="form-group">
-                                    <label for="userPassword">Password</label>
-                                    <input type="password" class="form-control" id="userPassword">
-                                    <small id="emailHelp" class="form-text text-muted"> <a class="passwordReset"
-                                            href="passwordReset.html"> Forgot your password? </a></small>
-                                </div>
-
-                                <div class="form-group form-check">
-                                    <input type="checkbox" class="form-check-input" id="rememberMe">
-                                    <label class="form-check-label" for="rememberMe">Remember me</label>
-                                </div>
-
-                                <button type="button" class="btn enter-btn drop-btn">Enter</button>
-
-                                <div class="dropdown-divider"></div>
-
-                                Not a member yet?
-                                <button type="button" class="btn btn-primary signUp-btn"> <a href="newUser.html">Sign up
-                                        now</a></button>
-
-                            </form>
-                        </div>
-                    </div>
-                </form>
-            </div>
-        </nav>
-    </header>
-
-    <main>
         <!-- MEMBER SIGN UP FORM-->
 
         <div class="contactArea d-flex justify-content-center">
@@ -115,15 +71,12 @@
                             <div class="col-md-6 mb-3">
                                 <label for="validationDefault01">First name</label>
 
-                                <input type="text" class="form-control" id="firstname" placeholder="Your name" <input
-                                    type="text" class="form-control" id="validationDefault01" placeholder="Your name"
-                                    required>
+                                <input type="text" class="form-control" id="firstname" placeholder="Your name">
                             </div>
                             <div class="col-md-6 mb-3">
                                 <label for="validationDefault02">Last name</label>
 
-                                <input type="text" class="form-control" id="lastname" <input type="text"
-                                    class="form-control" id="validationDefault02" placeholder="Your last name" required>
+                                <input type="text" class="form-control" id="lastname" placeholder="Your last name" required>
                             </div>
                         </div>
 
@@ -138,18 +91,15 @@
 
                         <div class="form-row">
                             <div class="col-md-6 mb-3">
-                                <label for="validationDefault01">RG</label>
+                                <label for="validationDefault01">CPF</label>
 
-                                <input type="text" class="form-control" id="identification" placeholder="Only numbers"
-                                    <input type="text" class="form-control" id="validationDefault01"
-                                    placeholder="Only numbers" required>
+                                <input type="text" class="form-control" id="identification" placeholder="Only numbers">
+                                    
                             </div>
                             <div class="col-md-6 mb-3">
                                 <label for="validationDefault02">E-mail</label>
 
-                                <input type="email" class="form-control" id="email" placeholder="Your email" <input
-                                    type="text" class="form-control" id="validationDefault02" placeholder="Your email"
-                                    required>
+                                <input type="email" class="form-control" id="email" placeholder="Your email">
                             </div>
                         </div>
 
@@ -157,16 +107,12 @@
                             <div class="col-md-6 mb-3">
                                 <label for="validationDefault01">Password</label>
 
-                                <input type="password" class="form-control" id="password" placeholder="Password" <input
-                                    type="text" class="form-control" id="validationDefault01" placeholder="Password"
-                                    required>
+                                <input type="password" class="form-control" id="password" placeholder="Password"> 
                             </div>
                             <div class="col-md-6 mb-3">
                                 <label for="validationDefault02">Confirm your password</label>
 
-                                <input type="password" class="form-control" id="validatepassword" placeholder="Password"
-                                    <input type="text" class="form-control" id="validationDefault02"
-                                    placeholder="Password" required>
+                                <input type="password" class="form-control" id="validatepassword" placeholder="Password">
                             </div>
                         </div>
 
@@ -188,8 +134,7 @@
                         </div>
                         <div class="form-group">
                             <label for="inputAddress2">Address 2</label>
-                            <input type="text" class="form-control" id="complement" <input type="text"
-                                class="form-control" id="inputAddress" placeholder="1234 Main St">
+                            <input type="text" class="form-control" id="complement">
                         </div>
 
                         <div class="form-row">
@@ -215,11 +160,11 @@
                             <div class="form-check">
                                 <input class="form-check-input" type="checkbox" value="" id="invalidCheck2" required>
                                 <label class="form-check-label" for="invalidCheck2">
-                                    I agree to <a href="#">terms and conditions</a>
+                                    I agree to <a class="terms" href="termsandconditions.html">terms & conditions.</a>
                                 </label>
                             </div>
                         </div>
-                        <button class="btn send-btn" type="submit">Submit</button>
+                        <button class="btn send-btn lets-btn" type="submit">Submit</button>
                 </div>
                 </form>
             </div>
