--- a/passwordReset.html
+++ b/passwordReset.html
@@ -99,6 +99,7 @@
                   <label class="form-check-label" for="rememberMe">Remember me</label>
                 </div>  
               </div>
+              <a href="#" role="button" class="btn btn-primary enter-btn">Enter</a></button>
             </form>
             <div class="modal-footer d-flex justify-content-center">
               <p>Problems in login?</p>
