--- a/index.htm
+++ b/index.htm
@@ -161,63 +161,63 @@
       </ol>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <a href="#" data-toggle="modal" data-target="#infoMovies">
+          <a href="#" data-toggle="modal" data-target="#infoMovies" id="carousel-item">
             <img src="srcs/assets/avengersEndGame.jpg" class="d-block w-100 img-sizing" alt="Avengers: Endgame">
           </a>
         </div>
         <div class="carousel-item">
-          <a href="#" data-toggle="modal" data-target="#infoMovies">
+          <a href="#" data-toggle="modal" data-target="#infoMovies" id="carousel-item">
             <img src="srcs/assets/interestelar.jpg" class="d-block w-100 img-sizing" alt="Interestelar">
           </a>
         </div>
         <div class="carousel-item">
-          <a href="#" data-toggle="modal" data-target="#infoMovies">
+          <a href="#" data-toggle="modal" data-target="#infoMovies" id="carousel-item">
             <img src="srcs/assets/parasite.jpg" class="d-block w-100 img-sizing" alt="Parasite">
           </a>
         </div>
         <div class="carousel-item">
-          <a href="#" data-toggle="modal" data-target="#infoMovies">
+          <a href="#" data-toggle="modal" data-target="#infoMovies" id="carousel-item">
             <img src="srcs/assets/4k-joker-2020-8l.jpg" class="d-block w-100 img-sizing img-position" alt="Joker">
           </a>
         </div>
         <div class="carousel-item">
-          <a href="#" data-toggle="modal" data-target="#infoMovies">
+          <a href="#" data-toggle="modal" data-target="#infoMovies" id="carousel-item">
             <img src="srcs/assets/yourname.jpg" class="d-block w-100 img-sizing img-position" alt="Your Name">
           </a>
         </div>
         <div class="carousel-item">
-          <a href="#" data-toggle="modal" data-target="#infoMovies">
+          <a href="#" data-toggle="modal" data-target="#infoMovies" id="carousel-item">
             <img src="srcs/assets/trumanshow.jpg" class="d-block w-100 img-sizing img-position" alt="The Truman Show">
           </a>
         </div>
         <div class="carousel-item">
-          <a href="#" data-toggle="modal" data-target="#infoMovies">
+          <a href="#" data-toggle="modal" data-target="#infoMovies" id="carousel-item">
             <img src="srcs/assets/nysm.jpg" class="d-block w-100 img-sizing" alt="Now You See Me">
           </a>
         </div>
         <div class="carousel-item">
-          <a href="#" data-toggle="modal" data-target="#infoMovies">
+          <a href="#" data-toggle="modal" data-target="#infoMovies" id="carousel-item">
             <img src="srcs/assets/split.jpg" class="d-block w-100 img-sizing" alt="Split">
           </a>
         </div>
         <div class="carousel-item">
-          <a href="#" data-toggle="modal" data-target="#infoMovies">
+          <a href="#" data-toggle="modal" data-target="#infoMovies" id="carousel-item">
             <img src="srcs/assets/viva.jpg" class="d-block w-100 img-sizing img-position" alt="Coco">
           </a>
         </div>
         <div class="carousel-item">
-          <a href="#" data-toggle="modal" data-target="#infoMovies">
+          <a href="#" data-toggle="modal" data-target="#infoMovies" id="carousel-item">
             <img src="srcs/assets/pocbp.jpg" class="d-block w-100 img-sizing"
               alt="Pirates of Caribe: The Curse of Black Pearl">
           </a>
         </div>
         <div class="carousel-item">
-          <a href="#" data-toggle="modal" data-target="#infoMovies">
+          <a href="#" data-toggle="modal" data-target="#infoMovies" id="carousel-item">
             <img src="srcs/assets/rocketman.jpg" class="d-block w-100 img-sizing img-position" alt="Rocketman">
           </a>
         </div>
         <div class="carousel-item">
-          <a href="#" data-toggle="modal" data-target="#infoMovies">
+          <a href="#" data-toggle="modal" data-target="#infoMovies" id="carousel-item">
             <img src="srcs/assets/inception.jpg" class="d-block w-100 img-sizing img-position" alt="Inception">
           </a>
         </div>
@@ -243,21 +243,8 @@
               <span aria-hidden="true">&times;</span>
             </button>
           </div>
-          <div class="modal-body p-0">
-            <div class="resultArea d-flex justify-content-center p-md-1 m-md-1">
-              <img class="poster p-3" id="poster" src="srcs/assets/ResiliaPoster.jpg">
-              <div class="memberSearch m-md-3 p-md-3">
-                <h3 class="mb-5" id="title"><b>TITLE</b></h3>
-                <p id="year">YEAR: </p>
-                <p id="director">DIRECTOR: </p>
-                <p id="runtime">RUNTIME: </p>
-                <p id="actors">STARS:</p>
-                <p id="release">RELEASE DATE: </p>
-                <p id="synopsis">SYNOPSIS: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse quis
-                  odio non nibh cursus pulvinar. Nulla sagittis, tellus nec mattis finibus, metus nisi facilisis nisi,
-                  in eleifend orci metus sit amet erat. Morbi vel metus vitae lorem dapibus feugiat. </p>
-              </div>
-            </div>
+          <div class="modal-body p-0" id="carousel-modal-body">
+
 
           </div>
         </div>
@@ -429,8 +416,10 @@
 
 <script src="srcs/javascript/loginNavbar.js"></script>
 <script src="srcs/javascript/modalSearch.js"></script>
+<script src="srcs/javascript/carouselMovie.js"></script>
 
 <script src="srcs/javascript/controllers/ModalSearchController.js"></script>
+<script src="srcs/javascript/controllers/CarouselModalController.js"></script>
 <script src="srcs/javascript/models/ModalSearchModel.js"></script>
 <script src="srcs/javascript/views/ModalSearchView.js"></script>
 <script src="srcs/javascript/views/ModalSearchError.js"></script>
