alteração minima do index

--- a/index.htm
+++ b/index.htm
@@ -134,12 +134,11 @@
 
           <div class="modal-footer d-flex justify-content-center">
             <p>Not what you're looking for? Try our</p>
-            <button type="button" class="btn lets-btn" data-dismiss="modal" onclick="window.location.href='movieSearch.html'">Advanced search</button>
+            <button type="button" class="btn lets-btn" data-dismiss="modal"
+              onclick="window.location.href='movieSearch.html'">Advanced search</button>
           </div>
         </div>
       </div>
-    </div>
-
     </div>
 
     <!--MOVIES CAROUSEL-->
