--- a/index.htm
+++ b/index.htm
@@ -51,11 +51,13 @@
 
         </ul>
 
-        <form class="form-inline my-2 my-lg-0 mr-3">
-          <input class="form-control mr-sm-2 mb-1" type="search" placeholder="Your favorite movie" aria-label="Search"
-            id="movie-search">
-          <button class="btn btn-outline-dark mb-1 mr-2 search-btn" type="button" id="button-search" data-toggle="modal"
-            data-target="#searchMovies">Search</button>
+        <section class="form-inline my-2 my-lg-0 mr-3">
+          <form id="form-search">
+            <input class="form-control mr-sm-2 mb-1" type="search" placeholder="Your favorite movie" aria-label="Search"
+              id="movie-search">
+            <button class="btn btn-outline-dark mb-1 mr-2 search-btn" type="submit" id="button-search"
+              data-toggle="modal" data-target="#searchMovies">Search</button>
+          </form>
           <div class="dropdown">
             <button class="btn btn-dark sign-btn mb-1 mr-2 dropdown-toggle signIn-btn" type="button"
               id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -75,7 +77,7 @@
               </form>
             </div>
           </div>
-        </form>
+        </section>
       </div>
     </nav>
   </header>
